--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,28 +15,37 @@
     "init:embeddings": "tsx scripts/initialize-embeddings.ts"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/functions-js": "^2.4.4",
+    "@supabase/postgrest-js": "^1.18.1",
+    "@supabase/realtime-js": "^2.11.3",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.48.0",
-    "ai": "^4.1.10",
-    "daisyui": "^4.12.23",
-    "dotenv": "^16.4.7",
-    "next": "15.1.5",
-    "openai": "^4.80.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sonner": "^1.7.2"
+    "@supabase/storage-js": "^2.7.1",
+    "@supabase/supabase-js": "^2.39.3",
+    "@types/d3-cloud": "^1.2.9",
+    "ai": "^2.2.31",
+    "d3": "^7.9.0",
+    "d3-cloud": "^1.2.7",
+    "dotenv": "^16.4.1",
+    "next": "14.1.0",
+    "object-hash": "^3.0.0",
+    "openai": "^4.26.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sonner": "^1.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.5",
-    "postcss": "^8",
+    "@types/d3": "^7.4.3",
+    "@types/node": "^20.17.16",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^4.12.23",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5"
+    "tsx": "^4.7.0",
+    "typescript": "^5.7.3"
   }
 }
