--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test:ticket-api": "tsx scripts/test-ticket-api.ts",
     "test:ticket-curl": "chmod +x scripts/test-ticket-api.sh && ./scripts/test-ticket-api.sh",
     "test:priority": "tsx scripts/test-priority.ts",
-    "setup:vector-search": "psql -h ubskphcgyqrtccmqwmpa.supabase.co -p 5432 -d postgres -U postgres -f scripts/setup-vector-search.sql",
-    "init:embeddings": "tsx scripts/initialize-embeddings.ts"
+    "test:langsmith": "tsx scripts/test-langsmith.ts"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.27",
+    "@langchain/core": "^0.3.37",
+    "@langchain/openai": "^0.4.2",
+    "@langchain/pinecone": "^0.1.3",
+    "@pinecone-database/pinecone": "^4.1.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/functions-js": "^2.4.4",
     "@supabase/postgrest-js": "^1.18.1",
@@ -27,6 +31,7 @@
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "dotenv": "^16.4.1",
+    "langsmith": "^0.3.3",
     "next": "14.1.0",
     "object-hash": "^3.0.0",
     "openai": "^4.26.0",
@@ -35,15 +40,18 @@
     "sonner": "^1.3.1"
   },
   "devDependencies": {
+    "@esbuild/darwin-x64": "^0.24.2",
     "@types/d3": "^7.4.3",
     "@types/node": "^20.17.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.12.23",
+    "esbuild": "^0.24.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.31",
+    "supabase": "^2.9.6",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.7.3"
