--- a/package.json
+++ b/package.json
@@ -37,17 +37,16 @@
     "openai": "^4.26.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sonner": "^1.3.1"
+    "sonner": "^1.3.1",
+    "esbuild": "^0.24.2"
   },
   "devDependencies": {
-    "@esbuild/darwin-x64": "^0.24.2",
     "@types/d3": "^7.4.3",
     "@types/node": "^20.17.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.12.23",
-    "esbuild": "^0.24.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.31",
